<resources>

    <string name="app_name">The Social</string>
    <string name="error">Error</string>
    <string name="tryAgain">Try again</string>
    <string name="dialogMessage">Do you want to try again?</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">The Social</string>
    <string name="log_in">Log in</string>
    <string name="success">success</string>
    <string name="username">Username</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="gender">Gender</string>
    <string name="my_profile">My Profile</string>
    <string name="post_to_wall">Post to Wall</string>
    <string name="menu">menu</string>
    <string name="edit_profile">Edit profile</string>
    <string name="location">Location</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="burkan_yilmaz">Nameless Friend</string>
    <string name="profilephoto">profilePhoto</string>
    <string name="friend_list">Friend List</string>
    <string name="show_post">Show Post</string>
    <string name="messages">Messages</string>
    <string name="back">Back</string>
    <string name="group_list">Group List</string>

</resources>