<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	
     <Button 
        android:id="@+id/friends"
        android:text="@string/friend_list"
        android:gravity="center"
        android:layout_below="@+id/profile"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toFriendsList"
        />
     <Button 
        android:id="@+id/groups"
        android:text="@string/group_list"
        android:gravity="center"
        android:layout_below="@+id/post"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toGroupList"
        />
    <Button 
        android:id="@id/profile"
        android:text="@string/my_profile"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="toProfile"
        />
   
      <Button 
        android:id="@id/post"
        android:text="@string/post_to_wall"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
      <Button 
        android:id="@+id/logout"
        android:text="@string/log_out"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"
        />
      

</RelativeLayout>